--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 body {
-  background: #000000;
-  padding: 0 24px;
-  margin: 0;
-  height: 100vh;
+  background-color: black;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+}
+
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
   color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
