--- a/style.css
+++ b/style.css
@@ -1,13 +1,21 @@
 body {
   background-color: black;
+
+}
+
+.container {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   position: absolute;
+  border: 2px solid rgb(255, 255, 255);
+  padding: 50px;
+  width: 25%;
 }
 
 h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   color: white;
+  text-align: center;
 }
