--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ body {
   padding: 50px;
   width: 25%;
 }
+.btn {
+	background: none ;
+	color: white;
+	border: 2px solid rgb(255, 255, 255);
+  position: absolute;
+}
 
 h1 {
   font-family: Arial, Helvetica, sans-serif;
