--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 	background: none ;
 	color: white;
 	border: 2px solid rgb(255, 255, 255);
-	position: right;
+	position: left;
 }
 
 h1 {
