--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body {
 	background: none ;
 	color: white;
 	border: 2px solid rgb(255, 255, 255);
-	position: left;
+	position: absolute;
+	font-family: Arial, Helevetica, sans-serif;
 }
 
 h1 {
