--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-imgage: url('/images/vistabus.jpg');
+  background-imgage: url('https://jofficial.me/images/vistabus.jpg');
   background-size: cover;
 
 }
