--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
-  background-imgage: url('https://jofficial.me/images/vistabus.jpg');
-  background-size: cover;
+  background-color: black;
 
 }
 
