--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   background-color: black;
+  background-image: url(https://jofficial.me/images/vistabus.jpg);
+  background-size: cover;
 
 }
 
