--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: black;
-  background-image: url("/images/vistabus.jpg");
+  background-image: url("images/vistabus.jpg");
 
 }
 
