--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 .btn {
 	background: none ;
-	color: white;
+	color: black;
 	border: 2px solid rgb(255, 255, 255);
 	position: absolute;
 	font-family: Arial, Helevetica, sans-serif;
@@ -26,6 +26,6 @@ body {
 h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  color: white;
+  color: black;
   text-align: center;
 }
