--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: black;
-  background-image: url("/images/diddy.jpg");
+  background-image: url("https://jofficial.me/images/diddy.png");
 
 }
 
