--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@ body {
 	background: none ;
 	color: black;
 	border: 2px solid rgb(255, 255, 255);
-	position: absolute;
 	font-family: Arial, Helevetica, sans-serif;
 	text-decoration: none;
 	border-radius: 12px;
+  margin-right: 10px;
 }
 
 h1 {
