--- a/diddyscorner/diddyscorner2/style.css
+++ b/diddyscorner/diddyscorner2/style.css
@@ -27,6 +27,7 @@ body {
     font-weight: bold;
     color: rgb(255, 255, 255);
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
   }
   p {
     color: white;
