--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   background-color: black;
+  background-image: url("https://jofficial.me/images/diddy.png");
+
 }
 
 .container {
@@ -11,44 +13,19 @@ body {
   padding: 50px;
   width: 25%;
 }
-
-.a {
-  background: none;
-  color: white;
-  border: 2px solid cyan;
-  font-family: Arial, Helvetica, sans-serif;
-  text-decoration: none;
-  border-radius: 12px;
-}
-
-nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-nav ul li {
-  margin: 10px 0;
-}
-
-nav ul li a {
-  color: white;
-  text-decoration: none;
-  font-family: Arial, Helvetica, sans-serif;
-  border: 2px solid cyan;
-  padding: 10px;
-  border-radius: 12px;
-  display: block;
-  text-align: center;
-}
-
-nav ul li a:hover {
-  background-color: cyan;
-  color: black;
+.btn {
+	background: none ;
+	color: rgb(217, 255, 0);
+	border: 2px solid rgb(255, 255, 255);
+	font-family: Arial, Helevetica, sans-serif;
+	text-decoration: none;
+	border-radius: 12px;
+  margin-right: 10px;
 }
 
 h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  color: rgb(255, 255, 255);
+  color: rgb(172, 78, 78);
   text-align: center;
 }
