--- a/diddyscornerFinal/style.css
+++ b/diddyscornerFinal/style.css
@@ -20,6 +20,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     border-radius: 12px;
+    padding: 4px;
 }
 
 h1 {
