--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
-  background-color: black;
-  background-image: url("https://jofficial.me/images/diddy.png");
+  background-color: #11111b;
 
 }
 
@@ -9,9 +8,11 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   position: absolute;
-  border: 2px solid rgb(255, 255, 255);
+  border: 2px solid #f9e2af;
   padding: 50px;
   width: 25%;
+  background-color: #1e1e2e;
+  border-radius: 12px;
 }
 .btn {
 	background: none ;
@@ -27,6 +28,12 @@ body {
 h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  color: rgb(172, 78, 78);
+  color: #cdd6f4;
+  text-align: center;
+}
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: #a6adc8;
   text-align: center;
 }
