--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   position: absolute;
-  border: 2px solid #f9e2af;
+  border: 2px solid #fab387;
   padding: 50px;
   width: 25%;
   background-color: #1e1e2e;
